# eletypes-backend

./: Cargo.toml  Dockerfile  generate-random-users.sh  test.json
src/: lib.rs  main.rs
src/config/: cors.rs  database.rs  routes.rs
src/constants/: mod.rs
src/controllers/: leaderboard_controller.rs  mod.rs  user_controller.rs
src/models/: api_response.rs  leaderboard.rs  mod.rs  score_model.rs  score_request.rs  user.rs  user_model.rs
src/repositories/: user_repository.rs
src/routes/: leaderboard_routes.rs  mod.rs  score_routes.rs  user_routes.rs
src/services/: leaderboard_service.rs  mod.rs  user_service.rs
src/structs/: api_response.rs  leaderboard.rs  login.rs  mod.rs  recaptcha_response.rs  sign_up.rs
src/utils/: database.rs  helpers.rs
