[package]
name = "eletypes-backend"
version = "0.1.0"
edition = "2018"

[dependencies]
mongodb = "3"
dotenv = "0.15.0"
serde = "1.0.209"
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
actix-cors = "0.7.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = "0.3.30"
futures = "0.3.30"
serde_json = "1.0.128"
reqwest = { version = "0.12.7", features = ["json"] }
actix-web = "4.5.1"
jsonwebtoken = "9.3.0"

[[bin]]
name = "eletypes-backend"
path = "src/main.rs"
